<resources>
    <string name="app_name">Tips App</string>
    <string name="create_tips">Create Tips</string>
    <string name="on_progress">Tips List</string>
    <string name="create_tip_group">TipsGroup</string>
    <string name="think_later">think later!</string>

    <!--dialog-->
    <string name="dialogTipsTitleAdd">Add Tips</string>
    <string name="dialogTipsTitleEdit">Edit Tips</string>
    <string name="dialogNextAction">Select Next Action</string>
    <string name="GroupAddtitle">add Group</string>
    <string name="cancel">cancel</string>
    <string name="OK">OK</string>
    <string name="add_complete_msg">add_complete_msg</string>
    <string name="contents_type_step">step</string><!--step, text, image, movie-->
    <string name="contents_type_text">text</string>
    <string name="contents_type_image">image</string>
    <string name="contents_type_movie">movie</string>
    <string name="tips_add_form_title">Tips title </string>
    <string name="tips_group">Group </string>
    <string name="next_action">Next Action</string>
    <string name="finish_register">Change Group</string>
    <string name="dialogTitleExpandImage">Expand Image</string>

    <!--error msg-->
    <string name="errorMsg1">you need to select value</string>
    <string name="errorMsg2">value is empty</string>
    <string name="errorMsg3">Please input title first！</string>
    <string name="errorMsg4">There is no image！</string>
    <string name="errorMsg5">Please input title first！</string>
    <string name="errorMsg6">failed to get ID</string>
    <string name="errorMsg7">you need to select file</string>
    <string name="errorMsg8">Fail！</string>


    <!--dialog commnet-->
    <string name="comment1">item will be deleted,OK?</string>
    <string name="comment2">is selected</string>
    <string name="comment3">Data has been deleted</string>
    <string name="comment4">updated!</string>
    <string name="comment5">タイトルの編集を有効にしました</string>
    <string name="comment6">Data is registered!</string>

    <!--menu_title-->
    <string name="menu_title1">edit</string>
    <string name="menu_title2">delete</string>

    <!--Comment-->
    <string name="title1">Select your next action!</string>
    <string name="title2">Next, put step title</string>
    <string name="title3">OK</string>
    <string name="title4">Tips title is registered</string>
    <string name="title5">Next, put free text</string>
    <string name="title6">OK</string>
    <string name="title7">Free Text Here!</string>
    <string name="title8">TEXT contents</string>
    <string name="title9">STEP</string>
    <string name="title10">Next, choose image</string>
    <string name="title11">Next, choose movie</string>
    <string name="title12">find from file</string>
    <string name="title13">take photo</string>
    <string name="title14">take movie</string>
    <string name="title15">PHOTO</string>
    <string name="title16">MOVIE</string>
    <string name="title17">Tips GROUP</string>
    <string name="title18">Group</string>
    <string name="title19">Tips List</string>
    <string name="title20">Create New Tips</string>
    <string name="title21">Contents Edit</string>

    <string name="news">Recently I want to go to newyork</string>
    <string name="in_news">Surrender to the music of the night at ‘The Phantom of the Opera,’ the longest-running show in Broadway history. Featuring a swoon-worthy score 7</string>
    <string name="publich_date">2019/01/05</string>
</resources>
