<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="8dp"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_title_area"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_more"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_title"
                    android:textSize="@dimen/Middiam"
                    android:text="@string/title1"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:id="@+id/image_delete"
                android:src="@mipmap/ic_delete"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />




            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type_select_group"
                android:paddingLeft="15dp"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/radio_title_area"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt1"
                    android:text="@string/contents_type_step"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt2"
                    android:text="@string/contents_type_text"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt3"
                    android:text="@string/contents_type_image"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt4"
                    android:text="@string/contents_type_movie"
                    />

            </RadioGroup>



        </android.support.constraint.ConstraintLayout>



    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>