<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="3dp"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background1"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/title_area"
                android:padding="3dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_text_yellow"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_title"
                    android:textSize="18sp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/title5"
                    />

            </LinearLayout>


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/step_area"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/title_area"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title7"
                    android:id="@+id/text_title"
                    android:layout_marginLeft="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_title_edit"
                    android:lines="6"
                    android:gravity="top"
                    android:padding="2dp"
                    android:textSize="14sp"
                    android:layout_marginTop="7dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/text_border"
                    app:layout_constraintLeft_toLeftOf="@id/text_title"
                    app:layout_constraintTop_toBottomOf="@id/text_title"
                    />


            </android.support.constraint.ConstraintLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/step_area"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                >


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/layout_ok"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ripple_effect"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/ic_check_ok"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:layout_marginLeft="1dp"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/title3"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/layout_ng"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ripple_effect"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/ic_cancel_none"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#fff"
                        android:layout_marginLeft="1dp"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/cancel"
                        />

                </LinearLayout>


            </LinearLayout>




        </android.support.constraint.ConstraintLayout>



    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>