<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.design_phantom.hirorock1103.template_01.MainTipsAddActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:scrollbars="vertical"
        android:id="@+id/scroll"
        >
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:id="@+id/tips_add_form_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tips_add_form_title"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_title"
                        />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:id="@+id/update"
                        android:src="@mipmap/ic_update1"
                        />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:id="@+id/tips_category"
                app:layout_constraintTop_toBottomOf="@id/tips_add_form_title"
                app:layout_constraintLeft_toLeftOf="@id/tips_add_form_title"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tips_group"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="android"
                    style="@style/background_corner_radius_primary_dark"
                    android:id="@+id/group_name"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:id="@+id/bt_area"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tips_category"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/next_action"
                    android:padding="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ripple_effect_accent"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/ic_action1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="#fff"
                        android:layout_gravity="center_vertical"
                        android:text="@string/next_action"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/bt_ok"
                    android:padding="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ripple_effect"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@mipmap/ic_group_image1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center_vertical"
                        android:textColor="#fff"
                        android:text="@string/finish_register"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/area"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/bt_area"
                >


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/result_area"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/area"
                >

            </LinearLayout>



        </android.support.constraint.ConstraintLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>
